# Tangram

./: .gitignore  README.md  constants.py  grid.py  polygon.py  polygonlist.py  pyproject.toml  self.py  tangram.py
